; ModuleID = '/home/carl/AnghaBench/vlc/modules/codec/extr_hxxx_helper.c_helper_process_block_xvcc2annexb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/codec/extr_hxxx_helper.c_helper_process_block_xvcc2annexb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hxxx_helper = type { i32 }
%struct.TYPE_6__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_6__* (%struct.hxxx_helper*, %struct.TYPE_6__*, i32*)* @helper_process_block_xvcc2annexb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_6__* @helper_process_block_xvcc2annexb(%struct.hxxx_helper* %0, %struct.TYPE_6__* %1, i32* %2) #0 {
  %4 = alloca %struct.hxxx_helper*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i32*, align 8
  store %struct.hxxx_helper* %0, %struct.hxxx_helper** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.hxxx_helper*, %struct.hxxx_helper** %4, align 8
  %8 = call i32 @helper_nal_length_valid(%struct.hxxx_helper* %7)
  %9 = call i32 @assert(i32 %8)
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.hxxx_helper*, %struct.hxxx_helper** %4, align 8
  %17 = getelementptr inbounds %struct.hxxx_helper, %struct.hxxx_helper* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @h264_AVC_to_AnnexB(i32 %12, i32 %15, i32 %18)
  %20 = load %struct.hxxx_helper*, %struct.hxxx_helper** %4, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call %struct.TYPE_6__* @helper_process_block_h264_annexb(%struct.hxxx_helper* %20, %struct.TYPE_6__* %21, i32* %22)
  ret %struct.TYPE_6__* %23
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @helper_nal_length_valid(%struct.hxxx_helper*) #1

declare dso_local i32 @h264_AVC_to_AnnexB(i32, i32, i32) #1

declare dso_local %struct.TYPE_6__* @helper_process_block_h264_annexb(%struct.hxxx_helper*, %struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
